# flowDesk

./: .env.example  .eslintrc.js  .gitignore  .mcp.json  .prettierignore  .prettierrc  ACTUAL_STATUS_REPORT.md  ACTUAL_WORKING_STATUS.md  ARCHITECTURE_UPDATE.md  Blueprint.md  CALENDAR_ENGINE_IMPLEMENTATION.md  COMPLETE_APP_VERIFICATION.md  COMPLETE_INTEGRATION_FINAL_CHECK.md  COMPLETE_INTEGRATION_STATUS.md  COMPLETE_INTEGRATION_TEST.js  COMPONENT_VERIFICATION_REPORT.md  COMPREHENSIVE_FIX_STATUS.md  COMPREHENSIVE_IMPLEMENTATION_ANALYSIS.md  CONFIGURATION_GUIDE.md  CROSS_PLATFORM_DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEVELOPER_SETUP_GUIDE.md  DOCUMENTATION_INDEX.md  FINAL_INTEGRATION_STATUS.md  FINAL_INTEGRATION_VERIFICATION.js  FINAL_MAIL_CALENDAR_VERIFICATION.md  FINAL_PRE_TEST_VERIFICATION.md  FINAL_STATUS_SUMMARY.md  FLOW_DESK_SETUP_GUIDE.md  GMAIL_API_TEST.js  HONEST_FINAL_ASSESSMENT.md  INTEGRATION_COMPLETENESS_CHECK.md  INTEGRATION_VERIFICATION_COMPLETE.md  MAIL_INTEGRATION_SUMMARY.md  MISSING_FEATURES_IMPLEMENTATION_PLAN.md  MONOREPO_SETUP.md  OAUTH_REMOVAL_SUMMARY.md  OPERATIONS_GUIDE.md  PLUGIN_SYSTEM_AUDIT_SUMMARY.md  PRODUCTION_EMAIL_IMPLEMENTATION.md  (+31 more)
desktop-app/: .env.example  .eslintrc.js  .gitignore  ACCESSIBILITY_GUIDE.md  ADDITIONAL_FEATURES_LIST.md  AI_INTEGRATION_README.md  APPLE_MAIL_FEATURE_COMPARISON.md  BUILD.md  BUILD_STRATEGY.md  BUNDLE_OPTIMIZATION_REPORT.md  COMPLETE_FLOW_DESK_AUDIT_RESULTS.md  COMPLETE_IMPLEMENTATION_STATUS.md  COMPREHENSIVE_TEST_REPORT.md  CONFIGURATION_IMPLEMENTATION_SUMMARY.md  CONFIGURATION_MIGRATION.md  DATABASE_INITIALIZATION_SYSTEM.md  DATABASE_INTEGRATION_FIX_SUMMARY.md  DATABASE_RUST_BACKEND_FIX.md  DEEPSEEK_MULTI_PROVIDER_AI_INTEGRATION.md  DOCUMENTATION_SUMMARY.md  EMAIL_REFACTORING_SUMMARY.md  ENCRYPTION_KEY_MANAGEMENT.md  ERROR_HANDLING.md  ERROR_HANDLING_SUMMARY.md  FINAL_DEEP_AUDIT_RESULTS.md  GMAIL_OAUTH2_IMAP_IMPLEMENTATION.md  LOGGING_SYSTEM.md  (+29 more)
shared/rust-lib/: COMPREHENSIVE_RUST_ENGINE_AUDIT.md  Cargo.toml  Cargo.toml.backup  INTEGRATION_STATUS.md  NAPI_SOLUTION.md  README.md  README_INTEGRATION.md  build-script.sh  build.rs  final-integration-test.js  flow-desk-rust.d.ts  index.d.ts  index.js  package.json  rust-wrapper.js  simple-build-test.js  simple-ffi.js  simple-test.js  test-ffi.js  test-integration.cjs  test-integration.js  test-napi-functions.js  test-napi.js  test-native.js  test-production.js  test-simple.js  test.js  typescript-wrapper.ts  working-ffi.js
shared/rust-lib/.cargo/: config.toml.backup
shared/rust-lib/docs/: IDLE_NOTIFICATIONS.md
shared/rust-lib/examples/: email_notifications.rs  test_search_init.rs
shared/rust-lib/src/: calendar_clean.rs  calendar_simple.rs  config_sync.rs  crypto.rs  ffi.rs  lib.rs  lib_complex_backup.rs  lib_simple.rs  mail_simple.rs  napi_bindings.rs  napi_bindings_minimal.rs  search_simple.rs  types.rs  typescript-cli-wrapper.ts  typescript-ffi-wrapper.ts  utils.rs  vector_clock.rs
shared/rust-lib/src/ai/: analytics.rs  config.rs  content_generation.rs  email_assistant.rs  error.rs  mod.rs  napi.rs  tone_analysis.rs  types.rs  utils.rs
shared/rust-lib/src/ai/providers/: deepseek.rs  local.rs  mod.rs  openai.rs  utils.rs
shared/rust-lib/src/calendar/: auth.rs  config.rs  database.rs  engine.rs  error.rs  integration_test.rs  mod.rs  napi.rs  privacy_sync.rs  recurring.rs  rrule_processor.rs  search.rs  sync.rs  timezone_handler.rs  types.rs  utils.rs  webhook.rs
shared/rust-lib/src/calendar/providers/: caldav.rs  detection.rs  google.rs  mod.rs  outlook.rs  traits.rs
shared/rust-lib/src/crypto/: core.rs  keychain_manager.rs  mod.rs
shared/rust-lib/src/database/: calendar_db.rs  mail_db.rs  migrations.rs  mod.rs
shared/rust-lib/src/mail/: account_manager.rs  config.rs  database.rs  engine.rs  error.rs  mod.rs  napi.rs  notifications.rs  production_account_manager.rs  production_engine.rs  scheduler.rs  server_configs.rs  sync.rs  template_engine.rs  threading.rs  types.rs  utils.rs
shared/rust-lib/src/mail/auth/: mod.rs  oauth_manager.rs  storage.rs  token_manager.rs  token_storage.rs
shared/rust-lib/src/mail/providers/: gmail.rs  graph.rs  imap.rs  imap_client.rs  imap_new.rs  mod.rs  outlook.rs  smtp.rs  smtp_client.rs  traits.rs
shared/rust-lib/src/mail/providers/imap/: client.rs  connection.rs  idle.rs  mod.rs  search.rs  sync.rs  utils.rs
shared/rust-lib/src/search/: advanced_query.rs  analytics.rs  engine.rs  error.rs  index.rs  indexing.rs  integration.rs  mod.rs  napi.rs  performance.rs  query.rs  test_init.rs  testing.rs  types.rs
shared/rust-lib/src/search/providers/: github.rs  gmail.rs  gmail.rs.bak  local.rs  manager.rs  mod.rs  notion.rs  slack.rs  traits.rs
shared/rust-lib/src/storage/: encrypted_storage.rs  local_storage.rs  mod.rs
shared/rust-lib/src/transports/: cloud_sync.rs  import_export.rs  lan_sync.rs  mod.rs
shared/rust-lib/test-napi/: package.json
(+641 files in other folders)
