[package]
name = "flow-desk-shared"
version = "0.1.0"
edition = "2021"
description = "Shared Rust libraries for Flow Desk"
license = "MIT"

[lib]
name = "flow_desk_shared"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
blake3 = "1.5"
base64 = "0.21"
hex = "0.4"
thiserror = "1.0"
anyhow = "1.0"

# Cryptographic dependencies for config sync
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2.0", features = ["serde"] }
argon2 = { version = "0.5", features = ["std", "password-hash"] }
rand_core = { version = "0.6", features = ["getrandom"] }
rand = "0.8"
zeroize = { version = "1.7", features = ["zeroize_derive"] }

# Vector clocks and conflict resolution
im = "15.1"
indexmap = { version = "2.2", features = ["serde"] }

# Compression for config archives
flate2 = "1.0"
tar = "0.4"

# Network discovery and communication
mdns-sd = "0.11"
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"

# File system utilities
dirs = "5.0"

# For WebAssembly bindings (if needed for web)
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true }

# For FFI bindings (for mobile/desktop)
cbindgen = { version = "0.26", optional = true }

# Search engine dependencies (Tantivy)
tantivy = "0.25"
regex = "1.10"

# Async runtime and concurrency
tokio-util = { version = "0.7", features = ["rt", "compat"] }
dashmap = "5.5"
parking_lot = "0.12"
once_cell = "1.19"

# Serialization and logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# FFI and Node.js integration
napi = { version = "2.16", features = ["napi8", "tokio_rt"], optional = true }
napi-derive = { version = "2.16", optional = true }

# File system utilities
walkdir = "2.4"
sha2 = "0.10"

# CPU detection
num_cpus = "1.16"

# Mail engine dependencies
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "cookies", "multipart"] }
async-imap = "0.11"
async-native-tls = "0.5"
native-tls = "0.2"
rustls = "0.22"
tokio-rustls = "0.25"
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder", "file-transport", "dkim", "hostname"] }
oauth2 = { version = "4.4", features = ["reqwest"] }
url = "2.5"
mime = "0.3"
mailparse = "0.15"
quoted_printable = "0.5"
urlencoding = "2.1"
hostname = "0.3"
# Using async-imap instead of sync imap crate
mail-parser = "0.9"
md5 = "0.7"

# Database for local mail storage
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "migrate"] }

# WebSocket support for real-time updates
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }

# Webhook server support
warp = "0.3"

# Rate limiting and retry
governor = "0.6"
nonzero_ext = "0.3"
exponential-backoff = "2.0"
tower = { version = "0.4", features = ["timeout", "retry", "limit"] }

# HTML parsing for email content
scraper = "0.19"
html2text = "0.12"

# Email validation and parsing
addr = "0.15"

# Encryption for local storage
ring = "0.17"
aes-gcm = "0.10"

# Time utilities
humantime = "2.1"

# Configuration
config = "0.14"

# Calendar-specific dependencies
icalendar = "0.16"  # iCalendar parsing and generation
rrule = "0.12"      # RFC 5545 recurrence rule processing  
chrono-tz = "0.8"   # Timezone database support
# Note: CalDAV will be implemented manually using HTTP/reqwest
http = "1.0"
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }

# Message queue and task scheduling
tokio-cron-scheduler = "0.10"
crossbeam-channel = "0.5"
crossbeam-queue = "0.3"

# File system operations
fs4 = "0.7"
tempfile = "3.8"
bytes = "1.5"

# Logging and metrics
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# Security and authentication
keyring = "2.3"
secrecy = { version = "0.8", features = ["serde"] }

# Additional utilities
memchr = "2.7"
nom = "7.1"
pin-project-lite = "0.2"

# AI and ML dependencies - temporarily simplified to fix compilation
async-openai = "0.24"
# tiktoken-rs = "0.5"
# tokenizers = { version = "0.19", default-features = false }
# candle-core = "0.4"
# candle-nn = "0.4" 
# candle-transformers = "0.4"
# hf-hub = "0.3"
ndarray = "0.15"
# linfa = { version = "0.7", features = ["serde"] }
# linfa-bayes = "0.7"
# linfa-preprocessing = "0.7"
smartstring = "1.0"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = ["ffi"]
wasm = ["dep:wasm-bindgen", "dep:js-sys", "dep:web-sys"]
ffi = ["dep:cbindgen"]
napi = ["dep:napi", "dep:napi-derive"]
